src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_37.deca
// Description:
//    regle 3.37 operation partielle type_binary_op
//
// Resultats:
//    Ligne 7: Unary operation '-' cannot have operand of type : 'string'.
{
    int a = - "bonjour";
}
// raison : operation partielle type_unary_op
// message : Unary operation '-' cannot have operand of type : 'string'.